# cyber-zfs-backup

./: .hgignore  EXAMPLE-2.rst  EXAMPLE.rst  README.rst  auth.py  auth_example.py  bandwidth_report_header.txt  browse.py  cache_directory_sizes  cache_disk_usage  cache_file_sizes  chroot.py  create_ppath_ids  cyber-zfs-backup.ssh_config  db.py  debug.py  html.py  page.py  pyproject.toml  remove_user.sh  restore_bandwidth_report  restore_spec.py  run_bandwidth_report.sh  run_zbm.sh  run_zbm_report.sh  setup.py  timediff.py  validation.py  zbm  zbm.init  zbm_cfg.py  zbm_email.py  zbm_report  zbm_report_header.txt  zbm_report_header_steve.txt
cyber_zfs_backup/: __init__.py  __main__.py  expire.py  push.py  snapshot.py
debian/: changelog  control  copyright  examples  install  postinst  rules
expire/: expire-twb.py  expire.py  mktest  remove.sh  run_expire.sh
scripts/: backup-all.sh  backup-share-legacy.pl  backup-share.pl
sql/: apply_schema_revision.sh  create_schema_revision_table.sh  db-cfg.sh  db-data.sql  db.sql  grant.sh  rebuild.sh  zbm_cfg.sh
sql/revisions/: 00001-add-email-field-to-companies-users.sql  00002-recreate-filesystem-info-table.sql  00003-alter-share-name-type.sql  00004-filesystem_info-ids.sql  00005-add-filesystem-info-indexes.sql  00006-add-filesystem-info-ppath-index.sql  00007-add-admin-users.sql  00007-allow-users-with-no-company.sql  00008-admin-user-table.sql  00009-add-disable-company-field.sql  00010-add-disable-user-field.sql  (+3 more)
static/: tablesorter.css  zbm.css  zbm.js
systemd/: cyber-zfs-backup.service  expire.service  expire.timer
(+30 files in other folders)
